// 2.55 Change Log
// Updated 22nd Jan, 2022

//Since A102

//A102

Completely redesign ZC Launcher from the ground up; now 'zlauncher.exe'
	Has access to more configs for both ZC and ZQ, and can set custom
		resolution options in ZC.
	Can load Themes for itself as well as ZC/ZQ, and comes with a built-in
		theme editor to create new '.ztheme' files!
	( EmilyV, Jan 22nd, 2022 )

Add more Misc SFX
	( EmilyV, Jan 19th, 2022 )

Z3 animation and lens layer hiding fixes
	( Deedee, Jan 18th, 2022 )

Fix excessive 'saved in newer build' warnings
	( EmilyV, Jan 17th, 2022 )

Bridge combos respect effect flags
	( Deedee, Jan 17th, 2022 )

Upgrade progressive items
	Now they will skip items which normally increase a max counter,
	but would increase by 0 due to 'But Not Above...';
	including heart pieces checking the heart container increase.
	( EmilyV, Jan 17th, 2022 )

Fix random pixels appearing during opening wipe
	( EmilyV, Jan 11th, 2022 )

Fix FFC editor issues
	( EmilyV, Jan 10th, 2022 )

//Alpha 101

New QRs regarding enemies respawning and etc.
	( Deedee, Jan 9th, 2022 )

New FFC Editor
	( EmilyV, Dec 28th, 2021 )

Fix new darkrooms behaving oddly when returning from a passageway
	( EmilyV, Dec 27th, 2021 )

Fix old strings QR being weird
	( Deedee, Dec 24th, 2021 )

Fix: can now type to search itemclasses in initdata like in other lists.
	( EmilyV, Dec 24th, 2021 )

Add ZInfo files / itemclass custom renaming
	ZInfo is internal to the .qst by default, but
	can be saved externally to lower quest file size.
	( EmilyV, Dec 23rd, 2021 )

Add more level-specific palettes
	( Deedee, Dec 23rd, 2021 )

Fix bottle itemclass name
Add 's' hotkey for string editor
Fix dialog text cutoff
Fix combo editor scrollpane visual bug
Fix new respawn point not caring about water enough
Fix 'onDeath' script hardlock when using frame advance, and running before engine
	death animation
Fix version <1.92 quests not loading combo 'original tile' correctly
Fix 'Import combo to...' bug